apps/helpdesk/src/pages/common/draftjs/plugins/toolbar/components/WorkflowVariableDropdown.less
@import (reference) '~css/typography';

:local {
    .dropdown {
        min-width: 384px !important;
        max-width: 400px;
    }

    .noVariablesMessage {
        padding-left: 4px;
        padding-top: 8px;
        display: block;
        color: var(--neutral-grey-4);
    }

    .backButton {
        max-width: 100%;
        height: auto;
        padding: 0 !important;
        font-weight: 600;
        text-transform: none;
    }

    .backButtonIconLabel {
        overflow: hidden;
    }

    .header {
        .caption-allcaps();
        padding: 8px 4px 8px;
        color: var(--main-primary);
    }

    .categoryName {
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow-x: hidden;
    }

    .search {
        padding: var(--layout-spacing-s) var(--layout-spacing-xs);
        width: 100%;
        max-width: unset;
    }
    .item {
        display: flex;
        align-items: center;
        justify-content: space-between;
    }

    .itemContent {
        display: flex;
        align-items: center;
        gap: 8px;
        overflow: hidden;
    }

    .itemName {
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
    }

    .itemTrailIcon {
        color: var(--neutral-grey-4);
    }
}

